--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -11,3 +11,4 @@
 @import "./layouts/transition.scss";
 @import "./layouts/experience.scss";
 @import "./layouts/resume.scss";
+@import "./layouts/footer.scss";
