--- a/assets/style/base/_typography.scss
+++ b/assets/style/base/_typography.scss
@@ -1,16 +1,16 @@
 @font-face {
   font-family: "Antique olive";
-  src: url("./font/antique-olive/AQCT.ttf") format("truetype");
+  src: url("../font/antique-olive/AQCT.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "Rage";
-  src: url("./font/rage/RAGE.TTF") format("truetype");
+  src: url("../font/rage/RAGE.TTF") format("truetype");
 }
 
 @font-face {
   font-family: "Montserrat";
-  src: url("./font/montserrat/Monserrat-VariableFont_wght.ttf")
+  src: url("../font/montserrat/Monserrat-VariableFont_wght.ttf")
     format("truetype");
 }
 
