--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -74,15 +74,15 @@ a {
 
 @font-face {
   font-family: "Antique olive";
-  src: url("./font/antique-olive/AQCT.ttf") format("truetype");
+  src: url("../font/antique-olive/AQCT.ttf") format("truetype");
 }
 @font-face {
   font-family: "Rage";
-  src: url("./font/rage/RAGE.TTF") format("truetype");
+  src: url("../font/rage/RAGE.TTF") format("truetype");
 }
 @font-face {
   font-family: "Montserrat";
-  src: url("./font/montserrat/Monserrat-VariableFont_wght.ttf") format("truetype");
+  src: url("../font/montserrat/Monserrat-VariableFont_wght.ttf") format("truetype");
 }
 h1 {
   color: #e79796;
