--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -6,6 +6,7 @@
 @import "./components/button.scss";
 @import "./components/carrousel.scss";
 @import "./layouts/nav.scss";
+@import "./layouts/sidebar.scss";
 @import "./layouts/hero.scss";
 @import "./layouts/journey.scss";
 @import "./layouts/transition.scss";
