--- a/assets/style/utils/_variables.scss
+++ b/assets/style/utils/_variables.scss
@@ -11,3 +11,10 @@ $color-008: #443e1d;
 $font-001: "Antique olive";
 $font-002: "Rage";
 $font-003: "Montserrat";
+
+$sm: 576px;
+$md: 768px;
+$lg: 992px;
+$xl: 1200px;
+$xxl: 1400px;
+$xxxl: 1700px;
