--- a/assets/style/components/_button.scss
+++ b/assets/style/components/_button.scss
@@ -7,8 +7,13 @@ button {
   padding: 16px 30px;
   border-radius: 50px;
   background-color: $color-007;
+  @include rem(24);
   cursor: pointer;
   transition: background-color 0.4s ease-in-out, color 0.4s ease-in-out;
+  margin: 20px 0;
+  @include min($sm) {
+    @include rem(34);
+  }
   &:hover {
     background-color: $color-004;
     color: $color-001;
