--- a/assets/style/layouts/_hero.scss
+++ b/assets/style/layouts/_hero.scss
@@ -1,53 +1,72 @@
 .hero {
-    background-image: url("../images/bg-home.png");
+  background-image: url("../images/bg-home.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  padding: 90px 0 630px;
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 15px;
+    background-color: $color-white;
+    background-image: url("../images/blob-home.svg");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-position: right;
+    background-size: contain;
     width: 100%;
-    padding: 90px 0 630px;
-    &__content {
-        background-color: $color-white;
-        background-image: url("../images/blob-home.svg");
-        background-repeat: no-repeat;
-        background-position: right;
-        background-size: contain;
-        width: calc( 1228px - 433px );
-        margin: 0 auto;
-        padding: 100px 100px 260px 333px;
-        position: relative;
-        
-        &--img-wrapper {
-            position: absolute;
-            left: 0;
-            transform: translateX(-50%);
-            width : 443px;
-            height : 485px;
-            img {
-                height: 100%;
-                width: 100%;
-                object-fit: cover;
-            }
-            &::before {
-                content: "";
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                background-color: rgba($color: $color-004, $alpha: 0.5);
-                left: 33px;
-                top: 29px;
-                z-index: -1;
-            }
-        }
-        
-        p {
-            @include rem(26);
-        }
-        .btn {
-            display: block;
-            width: fit-content;
-            position:absolute;
-            left: 50%;
-            transform: translateX(-50%);
-            bottom: 70px;
-        }
+    margin: 0 auto;
+    position: relative;
+
+    @include min($sm) {
+      width: calc(1228px - 433px);
+      padding: 100px 100px 260px 333px;
     }
+
+    &--img-wrapper {
+      max-width: 80%;
+      width: 443px;
+      order: 5;
+      margin: 15px auto;
+      @include min($sm) {
+        position: absolute;
+        left: 0;
+        margin: 0;
+        transform: translateX(-50%);
+        width: 443px;
+        height: 485px;
+      }
+      img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+      }
+      &::before {
+        @include min($sm) {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          background-color: rgba($color: $color-004, $alpha: 0.5);
+          left: 33px;
+          top: 29px;
+          z-index: -1;
+        }
+      }
+    }
+
+    p {
+      @include rem(26);
+    }
+    .btn {
+      display: block;
+      width: fit-content;
+      @include min($sm) {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: 70px;
+      }
+    }
+  }
 }
