--- a/assets/style/utils/_mixins.scss
+++ b/assets/style/utils/_mixins.scss
@@ -1,3 +1,10 @@
-  @mixin rem($value) {
-    font-size: ($value / 16) + rem;
+@mixin rem($value) {
+  font-size: ($value / 16) + rem;
+}
+
+//Mixin pour les tailles d'écran
+@mixin min($size) {
+  @media only screen and (min-width: $size) {
+    @content;
+  }
 }
